# PyEDMReader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  env.sh  pyproject.toml  requirements.txt
cmake/: EDM.cmake
dat/: pmt_20230809_CDSPMT.csv  pmt_20230831_CDLPMT.csv
src/: EDMReader.cc  EDMReader.hpp  PyBinding.cpp
src/PyEDMReader/: JaEDMReader.py  __init__.py  _jaedmreader.py
